Z-index issue with tool-tip fixed

--- a/src/scenes/Main/Dashboard/styles.css
+++ b/src/scenes/Main/Dashboard/styles.css
@@ -43,7 +43,7 @@
     max-width: 70px;
     background: #598e79;
     text-align: center;
-    z-index: 1000;
+    z-index: 100;
   }
   
   @media only screen and (max-width: 756px) {
