--- a/src/scenes/Main/Overview/styles.css
+++ b/src/scenes/Main/Overview/styles.css
@@ -14,6 +14,6 @@
         top: 50px;
         width: 100%;
         overflow: auto;
-        z-index: 500;
+        z-index: 50;
     }
 }
